Set position in one line

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 
 			mesh = mmd.mesh;
 			mesh.scale.setScalar(0.1);
-			mesh.position.z = -2;
-			mesh.position.y = -1;
+			mesh.position.set(0, -1, -2);
 
 			mmdHelper.add(mesh, {
 				animation: mmd.animation,
